# aws-iot-device-sdk-embedded-C

./: .gitmodules
demos/pkcs11/common/include/: core_pkcs11_config.h  demo_helpers.h
demos/pkcs11/common/src/: demo_helpers.c
demos/pkcs11/pkcs11_demo_management_and_rng/: CMakeLists.txt  pkcs11_demo_management_and_rng.c
demos/pkcs11/pkcs11_demo_mechanisms_and_digests/: CMakeLists.txt  pkcs11_demo_mechanisms_and_digests.c
demos/pkcs11/pkcs11_demo_objects/: CMakeLists.txt  pkcs11_demo_objects.c
demos/pkcs11/pkcs11_demo_sign_and_verify/: CMakeLists.txt  pkcs11_demo_sign_and_verify.c
integration-test/pkcs11/: CMakeLists.txt
integration-test/pkcs11/system-tests/: pkcs11_system_test.c
integration-test/pkcs11/test-config/: aws_mbedtls_config.h  core_test_pkcs11_config.h  iot_pkcs11_config.h  iot_test_pkcs11_config.h  mbedtls_config.h
platform/posix/: pkcs11_pal.c
